# imguituner

./: .gitignore  CMakeLists.txt  Makefile  README.md  SpectrumPlot.tsx  colorSchemes.ts  compile_commands.json  icon_browser  native-linux-tuner-spec.md
audio/: AudioEngine.cpp  AudioEngine.hpp
config/: settings.json
core/: app_settings_io.cpp  session_settings_io.cpp  zoom_fft.cpp
core/fft/: fft_utils.cpp
docs/: tuning-capture-design.md
dsp/: zoom_processor.cpp  zoom_processor.hpp
dsp/analysis/: long_analysis_engine.cpp  long_analysis_engine.hpp  octave_lock_tracker.cpp  octave_lock_tracker.hpp
example_cpp/: audio_processor.d.ts  bindings.cpp  regions.hpp  strike_tracker.cpp  strike_tracker.hpp  types.ts  zoom_engine.cpp  zoom_engine.hpp
example_plots/: BasicPlot.tsx  ConcentricPlot.tsx  FineTuningIndicator.tsx  FrequencyLines.tsx  HarmonicsPlot.tsx  RadarPlot.tsx  SpectrumDebugOverlay.tsx  circleConfigurations.ts
gui/: command_registry.hpp  icon_browser.cpp  main_window.cpp  settings_page.cpp  settings_page.hpp  spectrum_view.cpp  spectrum_view.hpp  waterfall_view.cpp  waterfall_view.hpp
gui/analysis/: inharmonicity_window.hpp  long_analysis_engine.cpp  octave_lock_tracker.hpp
gui/pages/: mic_setup.hpp  new_session_setup.cpp  notes_controller.cpp  notes_controller.hpp  notes_state.hpp
gui/plots/: concentric_plot.cpp  (+3 more)
include/: audio_processor.hpp
scripts/: refactor_phase1_fix_includes.sh  refactor_phase1_move.sh
src/: butterworth_filter.cpp  tuner_gui.cpp  zoom_fft.cpp
temperaments/: bach_lehman_1722.json  equal_temperament.json
test/: basic_440_test.cpp  direct_zoom_test.cpp  mic_level_test.cpp  raw_fft_test.cpp  simple_tuner_test.cpp  zoom_fft_test.cpp
tuning/: notes_controller.cpp  notes_controller.hpp  notes_state.cpp  notes_state.hpp
(+54 files in other folders)
